parser/MyDatalogParser.cpp




// Generated from MyDatalog.g4 by ANTLR 4.11.1


#include "basetype.h"



#include "MyDatalogParser.h"


using namespace std;


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MyDatalogParserStaticData final {
  MyDatalogParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MyDatalogParserStaticData(const MyDatalogParserStaticData&) = delete;
  MyDatalogParserStaticData(MyDatalogParserStaticData&&) = delete;
  MyDatalogParserStaticData& operator=(const MyDatalogParserStaticData&) = delete;
  MyDatalogParserStaticData& operator=(MyDatalogParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mydatalogParserOnceFlag;
MyDatalogParserStaticData *mydatalogParserStaticData = nullptr;

void mydatalogParserInitialize() {
  assert(mydatalogParserStaticData == nullptr);
  auto staticData = std::make_unique<MyDatalogParserStaticData>(
    std::vector<std::string>{
      "datalog_edb_declare", "datalog_idb_declare", "datalog_relation_schema", 
      "datalog_rule_declare", "datalog_program", "datalog_rule", "head", 
      "body", "negation", "atom", "assign", "math_expr", "compare_expr", 
      "aggregation_expr", "attribute", "key_attribute", "non_key_attribute", 
      "compare_op", "aggregation_op", "math_op", "constant", "data_type"
    },
    std::vector<std::string>{
      "", "'EDB_DECL'", "'IDB_DECL'", "'RULE_DECL'", "", "", "", "", "", 
      "", "", "", "", "", "'MIN'", "'MAX'", "'SUM'", "'COUNT'", "'COUNT_DISTINCT'", 
      "", "':-'", "'_'", "','", "';'", "':'", "'.'", "'+'", "'-'", "'*'", 
      "'/'", "'!'", "'[!dedup]'", "'[!set-diff]'", "'[dedup-only]'", "'!='", 
      "'='", "'>='", "'>'", "'<='", "'<'", "'('", "')'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "TOKEN_EDB", "TOKEN_IDB", "TOKEN_RULE", "TOKEN_INTEGER", "TOKEN_STRING", 
      "TOKEN_INT", "TOKEN_LONG", "TOKEN_FLOAT", "TOKEN_DOUBLE", "TOKEN_VARCHAR", 
      "TOKEN_CHAR", "TOKEN_DATE", "TOKEN_DATETIME", "TOKEN_MIN", "TOKEN_MAX", 
      "TOKEN_SUM", "TOKEN_COUNT", "TOKEN_COUNT_DISTINCT", "TOKEN_ID", "TOKEN_BODY_HEAD_SEP", 
      "TOKEN_ANY", "TOKEN_COMMA", "TOKEN_SEMICOLON", "TOKEN_COLON", "TOKEN_DOT", 
      "TOKEN_PLUS", "TOKEN_MINUS", "TOKEN_MULT", "TOKEN_DIV", "TOKEN_NOT", 
      "TOKEN_NON_DEDUP", "TOKEN_NON_SET_DIFF", "TOKEN_DEDUP_ONLY", "TOKEN_NOT_EQUALS", 
      "TOKEN_EQUALS", "TOKEN_GREATER_EQUAL_THAN", "TOKEN_GREATER_THAN", 
      "TOKEN_LESS_EQUAL_THAN", "TOKEN_LESS_THAN", "TOKEN_LEFT_PAREN", "TOKEN_RIGHT_PAREN", 
      "TOKEN_LEFT_BRACKET", "TOKEN_RIGHT_BRACKET", "TOKEN_WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mydatalogParserStaticData = staticData.release();
}

}

MyDatalogParser::MyDatalogParser(TokenStream *input) : MyDatalogParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MyDatalogParser::MyDatalogParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MyDatalogParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mydatalogParserStaticData->atn, mydatalogParserStaticData->decisionToDFA, mydatalogParserStaticData->sharedContextCache, options);
}

MyDatalogParser::~MyDatalogParser() {
  delete _interpreter;
}

const atn::ATN& MyDatalogParser::getATN() const {
  return *mydatalogParserStaticData->atn;
}

std::string MyDatalogParser::getGrammarFileName() const {
  return "MyDatalog.g4";
}

const std::vector<std::string>& MyDatalogParser::getRuleNames() const {
  return mydatalogParserStaticData->ruleNames;
}

const dfa::Vocabulary& MyDatalogParser::getVocabulary() const {
  return mydatalogParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MyDatalogParser::getSerializedATN() const {
  return mydatalogParserStaticData->serializedATN;
}


//----------------- Datalog_edb_declareContext ------------------------------------------------------------------

MyDatalogParser::Datalog_edb_declareContext::Datalog_edb_declareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyDatalogParser::Datalog_edb_declareContext::TOKEN_EDB() {
  return getToken(MyDatalogParser::TOKEN_EDB, 0);
}

tree::TerminalNode* MyDatalogParser::Datalog_edb_declareContext::TOKEN_COLON() {
  return getToken(MyDatalogParser::TOKEN_COLON, 0);
}

std::vector<MyDatalogParser::Datalog_relation_schemaContext *> MyDatalogParser::Datalog_edb_declareContext::datalog_relation_schema() {
  return getRuleContexts<MyDatalogParser::Datalog_relation_schemaContext>();
}

MyDatalogParser::Datalog_relation_schemaContext* MyDatalogParser::Datalog_edb_declareContext::datalog_relation_schema(size_t i) {
  return getRuleContext<MyDatalogParser::Datalog_relation_schemaContext>(i);
}


size_t MyDatalogParser::Datalog_edb_declareContext::getRuleIndex() const {
  return MyDatalogParser::RuleDatalog_edb_declare;
}


MyDatalogParser::Datalog_edb_declareContext* MyDatalogParser::datalog_edb_declare() {
  Datalog_edb_declareContext *_localctx = _tracker.createInstance<Datalog_edb_declareContext>(_ctx, getState());
  enterRule(_localctx, 0, MyDatalogParser::RuleDatalog_edb_declare);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    vector<Schema> edb_list;
    setState(45);
    match(MyDatalogParser::TOKEN_EDB);
    setState(46);
    match(MyDatalogParser::TOKEN_COLON);
    setState(47);
    antlrcpp::downCast<Datalog_edb_declareContext *>(_localctx)->schema1 = datalog_relation_schema();
    edb_list.emplace_back(antlrcpp::downCast<Datalog_edb_declareContext *>(_localctx)->schema1->r);
    setState(54);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MyDatalogParser::TOKEN_ID) {
      setState(49);
      antlrcpp::downCast<Datalog_edb_declareContext *>(_localctx)->schema2 = datalog_relation_schema();
      edb_list.emplace_back(antlrcpp::downCast<Datalog_edb_declareContext *>(_localctx)->schema2->r);
      setState(56);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    antlrcpp::downCast<Datalog_edb_declareContext *>(_localctx)->r =  edb_list;
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Datalog_idb_declareContext ------------------------------------------------------------------

MyDatalogParser::Datalog_idb_declareContext::Datalog_idb_declareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyDatalogParser::Datalog_idb_declareContext::TOKEN_IDB() {
  return getToken(MyDatalogParser::TOKEN_IDB, 0);
}

tree::TerminalNode* MyDatalogParser::Datalog_idb_declareContext::TOKEN_COLON() {
  return getToken(MyDatalogParser::TOKEN_COLON, 0);
}

std::vector<MyDatalogParser::Datalog_relation_schemaContext *> MyDatalogParser::Datalog_idb_declareContext::datalog_relation_schema() {
  return getRuleContexts<MyDatalogParser::Datalog_relation_schemaContext>();
}

MyDatalogParser::Datalog_relation_schemaContext* MyDatalogParser::Datalog_idb_declareContext::datalog_relation_schema(size_t i) {
  return getRuleContext<MyDatalogParser::Datalog_relation_schemaContext>(i);
}


size_t MyDatalogParser::Datalog_idb_declareContext::getRuleIndex() const {
  return MyDatalogParser::RuleDatalog_idb_declare;
}


MyDatalogParser::Datalog_idb_declareContext* MyDatalogParser::datalog_idb_declare() {
  Datalog_idb_declareContext *_localctx = _tracker.createInstance<Datalog_idb_declareContext>(_ctx, getState());
  enterRule(_localctx, 2, MyDatalogParser::RuleDatalog_idb_declare);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    vector<Schema> idb_list;
    setState(60);
    match(MyDatalogParser::TOKEN_IDB);
    setState(61);
    match(MyDatalogParser::TOKEN_COLON);
    setState(62);
    antlrcpp::downCast<Datalog_idb_declareContext *>(_localctx)->schema1 = datalog_relation_schema();
    idb_list.emplace_back(antlrcpp::downCast<Datalog_idb_declareContext *>(_localctx)->schema1->r);
    setState(69);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MyDatalogParser::TOKEN_ID) {
      setState(64);
      antlrcpp::downCast<Datalog_idb_declareContext *>(_localctx)->schema2 = datalog_relation_schema();
      idb_list.emplace_back(antlrcpp::downCast<Datalog_idb_declareContext *>(_localctx)->schema2->r);
      setState(71);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    antlrcpp::downCast<Datalog_idb_declareContext *>(_localctx)->r =  idb_list;
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Datalog_relation_schemaContext ------------------------------------------------------------------

MyDatalogParser::Datalog_relation_schemaContext::Datalog_relation_schemaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyDatalogParser::Datalog_relation_schemaContext::TOKEN_LEFT_PAREN() {
  return getToken(MyDatalogParser::TOKEN_LEFT_PAREN, 0);
}

tree::TerminalNode* MyDatalogParser::Datalog_relation_schemaContext::TOKEN_RIGHT_PAREN() {
  return getToken(MyDatalogParser::TOKEN_RIGHT_PAREN, 0);
}

tree::TerminalNode* MyDatalogParser::Datalog_relation_schemaContext::TOKEN_ID() {
  return getToken(MyDatalogParser::TOKEN_ID, 0);
}

std::vector<MyDatalogParser::AttributeContext *> MyDatalogParser::Datalog_relation_schemaContext::attribute() {
  return getRuleContexts<MyDatalogParser::AttributeContext>();
}

MyDatalogParser::AttributeContext* MyDatalogParser::Datalog_relation_schemaContext::attribute(size_t i) {
  return getRuleContext<MyDatalogParser::AttributeContext>(i);
}

std::vector<tree::TerminalNode *> MyDatalogParser::Datalog_relation_schemaContext::TOKEN_COMMA() {
  return getTokens(MyDatalogParser::TOKEN_COMMA);
}

tree::TerminalNode* MyDatalogParser::Datalog_relation_schemaContext::TOKEN_COMMA(size_t i) {
  return getToken(MyDatalogParser::TOKEN_COMMA, i);
}


size_t MyDatalogParser::Datalog_relation_schemaContext::getRuleIndex() const {
  return MyDatalogParser::RuleDatalog_relation_schema;
}


MyDatalogParser::Datalog_relation_schemaContext* MyDatalogParser::datalog_relation_schema() {
  Datalog_relation_schemaContext *_localctx = _tracker.createInstance<Datalog_relation_schemaContext>(_ctx, getState());
  enterRule(_localctx, 4, MyDatalogParser::RuleDatalog_relation_schema);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    Schema schema;
    setState(75);
    antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->relation_name = match(MyDatalogParser::TOKEN_ID);
    schema.name = (antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->relation_name != nullptr ? antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->relation_name->getText() : "");
    setState(77);
    match(MyDatalogParser::TOKEN_LEFT_PAREN);
    setState(78);
    antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->t1 = attribute();
    schema.attributes.emplace_back(AtomArg(antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->t1->r.name, antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->t1->r.type, antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->t1->r.isKey));
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MyDatalogParser::TOKEN_COMMA) {
      setState(80);
      match(MyDatalogParser::TOKEN_COMMA);
      setState(81);
      antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->t2 = attribute();
      schema.attributes.emplace_back(AtomArg(antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->t2->r.name, antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->t2->r.type, antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->t2->r.isKey));
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(89);
    match(MyDatalogParser::TOKEN_RIGHT_PAREN);
    antlrcpp::downCast<Datalog_relation_schemaContext *>(_localctx)->r =  schema;
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Datalog_rule_declareContext ------------------------------------------------------------------

MyDatalogParser::Datalog_rule_declareContext::Datalog_rule_declareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyDatalogParser::Datalog_rule_declareContext::TOKEN_RULE() {
  return getToken(MyDatalogParser::TOKEN_RULE, 0);
}

tree::TerminalNode* MyDatalogParser::Datalog_rule_declareContext::TOKEN_COLON() {
  return getToken(MyDatalogParser::TOKEN_COLON, 0);
}

tree::TerminalNode* MyDatalogParser::Datalog_rule_declareContext::EOF() {
  return getToken(MyDatalogParser::EOF, 0);
}

MyDatalogParser::Datalog_programContext* MyDatalogParser::Datalog_rule_declareContext::datalog_program() {
  return getRuleContext<MyDatalogParser::Datalog_programContext>(0);
}


size_t MyDatalogParser::Datalog_rule_declareContext::getRuleIndex() const {
  return MyDatalogParser::RuleDatalog_rule_declare;
}


MyDatalogParser::Datalog_rule_declareContext* MyDatalogParser::datalog_rule_declare() {
  Datalog_rule_declareContext *_localctx = _tracker.createInstance<Datalog_rule_declareContext>(_ctx, getState());
  enterRule(_localctx, 6, MyDatalogParser::RuleDatalog_rule_declare);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(MyDatalogParser::TOKEN_RULE);
    setState(93);
    match(MyDatalogParser::TOKEN_COLON);
    setState(94);
    antlrcpp::downCast<Datalog_rule_declareContext *>(_localctx)->dp = datalog_program();
    antlrcpp::downCast<Datalog_rule_declareContext *>(_localctx)->r =  antlrcpp::downCast<Datalog_rule_declareContext *>(_localctx)->dp->r;
    setState(96);
    match(MyDatalogParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Datalog_programContext ------------------------------------------------------------------

MyDatalogParser::Datalog_programContext::Datalog_programContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MyDatalogParser::Datalog_ruleContext *> MyDatalogParser::Datalog_programContext::datalog_rule() {
  return getRuleContexts<MyDatalogParser::Datalog_ruleContext>();
}

MyDatalogParser::Datalog_ruleContext* MyDatalogParser::Datalog_programContext::datalog_rule(size_t i) {
  return getRuleContext<MyDatalogParser::Datalog_ruleContext>(i);
}


size_t MyDatalogParser::Datalog_programContext::getRuleIndex() const {
  return MyDatalogParser::RuleDatalog_program;
}


MyDatalogParser::Datalog_programContext* MyDatalogParser::datalog_program() {
  Datalog_programContext *_localctx = _tracker.createInstance<Datalog_programContext>(_ctx, getState());
  enterRule(_localctx, 8, MyDatalogParser::RuleDatalog_program);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    vector<RuleMap> rule_list;
    setState(99);
    antlrcpp::downCast<Datalog_programContext *>(_localctx)->r1 = datalog_rule();
    rule_list.emplace_back(antlrcpp::downCast<Datalog_programContext *>(_localctx)->r1->r);
    setState(106);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 15032909824) != 0) {
      setState(101);
      antlrcpp::downCast<Datalog_programContext *>(_localctx)->r2 = datalog_rule();
      rule_list.emplace_back(antlrcpp::downCast<Datalog_programContext *>(_localctx)->r2->r);
      setState(108);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    antlrcpp::downCast<Datalog_programContext *>(_localctx)->r =  rule_list;
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Datalog_ruleContext ------------------------------------------------------------------

MyDatalogParser::Datalog_ruleContext::Datalog_ruleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MyDatalogParser::Datalog_ruleContext::TOKEN_BODY_HEAD_SEP() {
  return getToken(MyDatalogParser::TOKEN_BODY_HEAD_SEP, 0);
}

tree::TerminalNode* MyDatalogParser::Datalog_ruleContext::TOKEN_DOT() {
  return getToken(MyDatalogParser::TOKEN_DOT, 0);
}

MyDatalogParser::HeadContext* MyDatalogParser::Datalog_ruleContext::head() {
  return getRuleContext<MyDatalogParser::HeadContext>(0);
}

tree::TerminalNode* MyDatalogParser::Datalog_ruleContext::TOKEN_NON_DEDUP() {
  return getToken(MyDatalogParser::TOKEN_NON_DEDUP, 0);
}

tree::TerminalNode* MyDatalogParser::Datalog_ruleContext::TOKEN_NON_SET_DIFF() {
  return getToken(MyDatalogParser::TOKEN_NON_SET_DIFF, 0);
}

tree::TerminalNode* MyDatalogParser::Datalog_ruleContext::TOKEN_DEDUP_ONLY() {
  return getToken(MyDatalogParser::TOKEN_DEDUP_ONLY, 0);
}

MyDatalogParser::BodyContext* MyDatalogParser::Datalog_ruleContext::body() {
  return getRuleContext<MyDatalogParser::BodyContext>(0);
}


size_t MyDatalogParser::Datalog_ruleContext::getRuleIndex() const {
  return MyDatalogParser::RuleDatalog_rule;
}

